# Email-Reminder

./: Dockerfile  client.Dockerfile  database.Dockerfile  docker-compose.yaml  pyproject.toml
client/: package-lock.json  package.json
client/src/: App.tsx  index.tsx  theme.ts
client/src/components/: Login.tsx
server/: main.py  pyproject.toml
server/migrations/: alembic.ini  models.py
server/migrations/alembic/versions/: a1809b602987_initial.py
