[tool.poetry]
name = "email-reminder"
version = "0.1.0"
description = ""
authors = ["Sarvesh Palav <Sarveshpalav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
databases = "^0.7.0"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.7"
alembic = "^1.11.2"
passlib = "^1.7.4"
pyjwt = "^2.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
